[tool.poetry]
name = "dicey-insights"
version = "0.1.0"
description = ""
authors = ["wioletadrobik <wdrobik@korrobio.com>"]
readme = "README.md"
packages = [{include = "dicey_insights"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.41.1"
bgg-api = "^1.1.10"
jupyter = "^1.1.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

